# CoffeeShop

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  COFFEESHOP_NOVELTY_ANALYSIS.md  Dockerfile  GAP_ANALYSIS.md  PROBLEM_STATEMENT.md  README.md  cloudbuild.yaml  conftest.py  parity_check.py  pyproject.toml  requirements.txt  test_dist.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: bandit.yml  ci.yml  dependabot-uv-sync.yml  submit-pypl.yml
agents/: __init__.py  ppo.py  sac.py
coffeeshop/: eval.py  evaluate.py  playback.py  train.py
conf/: config.yaml
conf/mediator/: default.yaml
configs/: agent_config.yaml  env_config.yaml  run_config.yaml
configs/agent/: ppo.yaml
configs/experiments/: baseline_vanilla_ppo_crafter.yaml  coffeeshop_crafter_comparison.yaml  coffeeshop_overcooked_cramped.yaml
configs/mediator/: default.yaml
configs/trainer/: default.yaml
core_marl/: __init__.py  experience_buffer.py  mediator.py  memory.py  social_actor.py
envs/: __init__.py  base.py
envs/aisaac/: README.md  __init__.py  wrapper.py
envs/crafter/: __init__.py  wrapper.py
envs/meltingpot/: __init__.py  wrapper.py
envs/nethack/: __init__.py  wrapper.py
envs/overcooked/: __init__.py  wrapper.py
envs/overcooked/layouts/: forced_cooperation.layout
models/: __init__.py  common.py
results/: README.md
scripts/: eval.py  evaluate.py  playback.py  test_envs.py  test_mediator.py  train.py
test/: test_envs_cli.py  test_mediator_manual.py  test_smoke.py  test_train_stub.py
tests/: test_experience_buffer.py  test_integration.py  test_invariants.py  test_mediator_math.py  test_shared_buffer.py  test_smoke.py  test_train_stub.py  verify_envs.py
utils/: __init__.py  checkpointing.py  diversity.py  evaluation.py  factory.py  logging.py  metrics.py  torch_utils.py
