[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeeshop"
version = "0.1.0"
description = "CoffeeShop Multi-Agent Reinforcement Learning Architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "packaging>=24.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
    "torch>=2.2.0",
    "gymnasium>=0.29.0",
    "shimmy>=1.3.0",
    "tensorboard>=2.15.0",
    "wandb>=0.16.0"
]

[project.optional-dependencies]
overcooked = ["overcooked-ai>=1.1.0", "pygame>=2.5.0"]
crafter = ["crafter>=1.8.0"]
nethack = ["nle==0.9.1"]
football = ["gfootball @ git+https://github.com/google-research/football.git"]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov", "bandit", "flake8"]
all = [
    "overcooked-ai>=1.1.0",
    "pygame>=2.5.0",
    "crafter>=1.8.0",
    "nle==0.9.1",
    "gfootball @ git+https://github.com/google-research/football.git"
]

[project.scripts]
coffeeshop-train = "coffeeshop.train:main"
coffeeshop-eval = "coffeeshop.eval:main"
coffeeshop-playback = "coffeeshop.playback:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core_marl*", "envs*", "utils*", "models*", "coffeeshop*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501", "F841"]
exclude = ["__pycache__", ".venv", "build", "data"]
